创建房间和房间内发送接收消息

--- a/client1.html
+++ b/client1.html
@@ -7,13 +7,18 @@
         const socket = io('http://localhost:3000');
         socket.on('connect', function () {
             document.write('client1 Connected<br/>');
+
             socket.emit('events', {
                 test: 'client1 test'
             });
-            socket.emit('send', 'client1');
             socket.emit('identity', 0, response =>
                 document.write('client1 Identity:', response, '<br/>'),
             );
+
+            socket.emit('create', {}, res => {
+                document.write(`房间创建成功，房间id是${ res }<br/>`)
+            })
+
         });
         socket.on('events', function(data) {
             document.write('client1 event ', data, '<br/>');
@@ -22,7 +27,7 @@
             document.write('client1 send ', data, '<br/>');
         });
         socket.on('exception', function(data) {
-            document.write('client1 exception', data, '<br/>');
+            console.error(data)
         });
         socket.on('disconnect', function() {
             document.write('client1 Disconnected', '<br/>');
